[metadata]
name = llamasearch-experimentalagents-storytell
version = 0.1.0
author = LlamaSearch AI
author_email = contact@llamasearch.ai
description = A modern Python framework for automated data storytelling, analysis, and dashboard generation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/llamasearchai/data-storytelling-framework
project_urls =
    Bug Tracker = https://github.com/llamasearchai/data-storytelling-framework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.0
    numpy>=1.18
    matplotlib>=3.0
    seaborn>=0.10
    plotly>=5.0
    jinja2>=3.0
    # Add other core dependencies discovered during implementation

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    storytell = llamasearch_experimentalagents_storytell.cli:main

[options.package_data]
llamasearch_experimentalagents_storytell = templates/*.html 